# Analogowy-Krehlik

./: .gitignore  README.md
firmware/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
firmware/bsp/STM32F429ZIT/: .mxproject  CMakeLists.txt  STM32F429ZIT.ioc  openocd.cfg
firmware/bsp/STM32F429ZIT/Core/Inc/: main.h  stm32f4xx_hal_conf.h
firmware/bsp/STM32F429ZIT/Core/Src/: adc.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c
firmware/bsp/STM32F429ZIT/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
firmware/bsp/STM32F429ZIT/cmake/stm32cubemx/: CMakeLists.txt
firmware/bsp/STM32F429ZIT/src/: bsp.cpp  bsp_adc.cpp  bsp_i2c_display.cpp  bsp_led.cpp
firmware/bsp/STM32G431C6TX/: .mxproject  CMakeLists.txt  STM32G431C6TX.ioc  STM32G431XX_FLASH.ld  openocd.cfg
firmware/bsp/STM32G431C6TX/Core/Inc/: main.h  stm32g4xx_hal_conf.h
firmware/bsp/STM32G431C6TX/Core/Src/: adc.c  gpio.c  i2c.c  main.c  usb.c
firmware/bsp/STM32G431C6TX/cmake/: gcc-arm-none-eabi.cmake
firmware/bsp/STM32G431C6TX/cmake/stm32cubemx/: CMakeLists.txt
firmware/bsp/STM32G431C6TX/src/: bsp.cpp  bsp_adc.cpp  bsp_i2c_display.cpp  bsp_led.cpp
firmware/bsp/STM32G431C6TX/src/include/: bsp.hpp  bsp_adc.hpp  bsp_display_bus.hpp  bsp_usb_vcp.hpp
firmware/cmake/: requirements.cmake
firmware/drivers/: CMakeLists.txt  ssd1306_display.cpp  ssd1306_display_port.cpp
firmware/drivers/include/: ssd1306_display.hpp
firmware/drivers/include_private/: ssd1306_display_font.hpp  ssd1306_display_port.hpp  ssd1306_display_registers.hpp
firmware/drivers/ssd1306_display/: CMakeLists.txt  ssd1306_display.cpp  ssd1306_display_fonts.cpp  ssd1306_display_port.cpp
firmware/drivers/ssd1306_display/include/: ssd1306_display.hpp  ssd1306_display_fonts.hpp
firmware/drivers/ssd1306_display/include_private/: ssd1306_display_port.hpp
firmware/src/: CMakeLists.txt  display.cpp  gui.cpp  main.cpp
firmware/src/include/: display.hpp  gui.hpp
precise_ammeter/: Curr_measurement.kicad_sch  MCU.kicad_sch  fp-lib-table  power_USB.kicad_sch  precise_ammeter.kicad_dru  precise_ammeter.kicad_pcb  precise_ammeter.kicad_pro  precise_ammeter.kicad_sch  sym-lib-table  untitled.kicad_sch  untitled2.kicad_sch
precise_ammeter/libs/: Pomona 1581 Banana Jack.STEP  agh_logo.kicad_mod
precise_ammeter/libs/DM-OLED096-636/: MODULE_DM-OLED096-636.kicad_mod
precise_ammeter/libs/INA121U/: INA121U.kicad_sym  SOIC127P599X175-8N.kicad_mod
precise_ammeter/libs/INA137UA/: INA137UA.kicad_sym  SOIC127P599X175-8N.kicad_mod
precise_ammeter/libs/LMC7660/KiCADv6/: 2025-11-02_23-45-07.kicad_sym
precise_ammeter/libs/TLV9001IDCKR/: SOT65P210X110-5N.kicad_mod  TLV9001IDCKR.kicad_sym
precise_ammeter/libs/TPS7A2433DBVR/KiCADv6/: 2025-11-02_23-38-23.kicad_sym
precise_ammeter/libs/TPS7A2450DBVR/KiCADv6/: 2025-11-02_23-22-36.kicad_sym
precise_ammeter/libs/USB4110GFA/: GCT_USB4110GFA.kicad_mod  USB4110GFA.kicad_sym
precise_ammeter/outjob/: precise_ammeter-B_Adhesive.gbr  precise_ammeter-B_Courtyard.gbr  precise_ammeter-B_Cu.gbr  precise_ammeter-B_Fab.gbr  precise_ammeter-B_Mask.gbr  precise_ammeter-B_Paste.gbr  precise_ammeter-B_Silkscreen.gbr  precise_ammeter-Edge_Cuts.gbr  precise_ammeter-F_Adhesive.gbr  precise_ammeter-F_Courtyard.gbr  precise_ammeter-F_Cu.gbr  precise_ammeter-F_Fab.gbr  precise_ammeter-F_Mask.gbr  precise_ammeter-F_Paste.gbr  precise_ammeter-F_Silkscreen.gbr  precise_ammeter-NPTH.drl  precise_ammeter-PTH.drl  precise_ammeter-User_4.gbr  precise_ammeter-User_Comments.gbr  precise_ammeter-User_Drawings.gbr  precise_ammeter-User_Eco1.gbr  precise_ammeter-User_Eco2.gbr  precise_ammeter-job.gbrjob
precise_ammeter/production/: netlist.ipc
(+13 files in other folders)
